linux命令流程+java性能工具整合